--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -1,8 +1,8 @@
-<% cache [I18n.locale, current_currency, @product, @taxon] do %>
+<% cache [I18n.locale, current_currency, @product] do %>
   <div data-hook="product_show" itemscope itemtype="http://schema.org/Product">
     <% @body_id = 'product-details' %>
     
-       <div><div><%= breadcrumbs(@taxon, ' / ') %></div> 1</div>
+     <div><%= breadcrumbs(@taxon, ' / ') %></div>
 
      <div class="columns six alpha" data-hook="product_left_part">
       <div class="row" data-hook="product_left_part_wrap">
