--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -17,8 +17,8 @@
                   <div class="module-inner">
                     <div class="module-ct">
                       <ul class="nav">
-                        <li><%= image_tag "ru.png" , :class => "fa-add2" %></li>
-                        <li><%= image_tag "eng.png", :class => "fa-add2"  %></li>
+                        <li><%= image_tag "ru.png" , :class => "fa-add2" %><%= I18n.locale = :ru %></li>
+                        <li><%= image_tag "eng.png", :class => "fa-add2"  %><%= I18n.locale = :en %></li>
                       </ul>
                     </div>
                   </div>
@@ -48,10 +48,10 @@
         <div class="toolbar-ct toolbar-ct-right col-xs-12 col-md-6 pull-right">
           <div class="toolbar-ct-3">
             <div class="btn-group">
-              <%= link_to "Registration", signup_path %>
+              <%= link_to Spree.t(:registration), signup_path %>
             </div>
             <div class="btn-group" style="margin-left:40px;">
-              <button type="button" class="btn btn-default"><%= link_to "Sign in", login_path %></button>
+              <button type="button" class="btn btn-default"><%= link_to Spree.t(:login), login_path %></button>
             </div>
           </div>
           <div class="toolbar-ct-2 ">
