--- a/app/views/spree/orders/_form.html.erb
+++ b/app/views/spree/orders/_form.html.erb
@@ -1,28 +1,51 @@
 <%= render :partial => 'spree/shared/error_messages', :locals => { :target => @order } %>
-<table id="cart-detail" data-hook>
-  <thead>
-    <tr data-hook="cart_items_headers">
-      <th class="cart-item-description-header" colspan="2"><%= Spree.t(:item) %></th>
-      <th class="cart-item-price-header"><%= Spree.t(:price) %></th>
-      <th class="cart-item-quantity-header"><%= Spree.t(:qty) %></th>
-      <th class="cart-item-total-header"><%= Spree.t(:total) %></th>
-      <th class="cart-item-delete-header"></th>
-    </tr>
-  </thead>
-  <tbody id="line_items" data-hook>
-    <%= render partial: 'line_item', collection: order_form.object.line_items, locals: {order_form: order_form} %>
-  </tbody>
-  <% if @order.adjustments.exists? || @order.line_item_adjustments.exists? || @order.shipment_adjustments.exists? %>
-    <tr class="cart-subtotal">
-      <td colspan="4" align='right'><h5><%= Spree.t(:cart_subtotal, :count => @order.line_items.sum(:quantity)) %></h5></th>
-      <td colspan><h5><%= order_form.object.display_item_total %></h5></td>
-      <td></td>
-    </tr>
-    <%= render "spree/orders/adjustments" %>
-  <% end %>
-  <tr class="cart-total">
-    <td colspan="4" align='right'><h5><%= Spree.t(:total) %></h5></th>
-    <td colspan><h5><%= order_form.object.display_total %></h5></td>
-    <td></td>
-  </tr>
-</table>
+
+              <div class="box-content">
+                <form>
+                  <div class="cart-info">
+                    <table class="table-line">
+                      <thead>
+                        <tr>
+                          <td class="image">&nbsp;</td>
+                          <td class="name"><%= Spree.t(:item) %></td>
+                          <td class="price"><%= Spree.t(:price) %></td>
+                          <td class="quantity"><%= Spree.t(:qty) %></td>
+                          <td class="price"><%= Spree.t(:total) %></td>
+                          <td>&nbsp;</td>
+                        </tr>
+                      </thead>
+                        <tbody>
+                          <%= render partial: 'line_item', collection: order_form.object.line_items, locals: {order_form: order_form} %>
+                        </tbody>
+                      </table>
+
+                  </div>
+                </form>
+
+                <div class="cart-total">
+                  <table id="total">
+                    <tbody>
+                        <% if @order.adjustments.exists? || @order.line_item_adjustments.exists? || @order.shipment_adjustments.exists? %>
+                    <tr>
+                      <td class="right"><b><%= Spree.t(:cart_subtotal, :count => @order.line_items.sum(:quantity)) %></b></td>
+                      <td class="right"><%= order_form.object.display_item_total %></td>
+                    </tr>
+<!--                     <%= render "spree/orders/adjustments" %> -->
+                  <% end %>
+
+
+                      <tr>
+                        <td class="right"><b><%= Spree.t(:total) %></b></th>
+                        <td class="right"><%= order_form.object.display_total %></td>
+                      </tr>
+
+                    </tbody>
+                  </table>
+                </div>
+
+
+
+
+
+
+
