--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -82,8 +82,8 @@
                   <div style="margin-bottom: 0px !important;" class="box_oc">
                     <div>
                       <ul>
-                        <li><a href="login.html">Login</a> / <a href="register.html">Register</a></li>
-                        <li><a href="password_reset.html">Forgotten Password</a></li>
+                        <li><%= link_to Spree.t(:login), login_path %> / <%= link_to Spree.t(:registration), signup_path %></li>
+                        <li><%= link_to Spree.t(:forgot_password), spree.recover_password_path %></li>
                         <li><a href="account.html">My Account</a></li>
                         <li><a href="wishlist.html">Wish List</a></li>
                         <li><a href="order_history.html">Order History</a></li>
