--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -1,8 +1,4 @@
-<!-- <header id="header" class="row" data-hook>
-  <figure id="logo" class="columns six" data-hook><%= logo %></figure>
-  <%= render :partial => 'spree/shared/nav_bar' %>
-  <%= render :partial => 'spree/shared/main_nav_bar' if store_menu? %>
-</header> -->
+
 
 
   <div id="toolbar">
@@ -46,7 +42,11 @@
             </div>
           </div>
         </div>
-        <div class="toolbar-ct toolbar-ct-right col-xs-12 col-md-6 pull-right">
+
+
+        <%= render :partial => 'spree/shared/login_bar' %> 
+        
+<!--         <div class="toolbar-ct toolbar-ct-right col-xs-12 col-md-6 pull-right">
           <div class="toolbar-ct-3">
             <div class="btn-group">
               <%= link_to Spree.t(:registration), signup_path %>
@@ -72,7 +72,9 @@
               </div>
             </div>
           </div>          
-        </div>
+        </div> -->
+
+
       </div>
     </div>
   </div>
